Bugfix: tooltip now aligns with mouse in graphical display.

--- a/VersaStack-web/src/main/webapp/css/graphTest.css
+++ b/VersaStack-web/src/main/webapp/css/graphTest.css
@@ -5,7 +5,6 @@
     color: #404040;
     border: 1px solid #999;
     padding: 7px;
-    margin: 37px;
 }
 
 #displayPanel{
